# cchlink

./: .gitignore  README.md  pyproject.toml  requirements.txt  开发计划.md
evaluation/: README.md  baseline_v8_standard.json  legacy_synthetic_manifest.csv  real_manifest.csv  real_v4_diagnosis.json  real_v4_report.json  real_v5_ensemble_report.json  real_v6_ensemble_diagnosis.json  real_v6_ensemble_report.json  real_v6_report.json  real_v7_report.json  real_v8_ensemble_diagnosis.json  real_v8_ensemble_report.json  real_v8_report.json  real_v9_report.json  standard_manifest.csv  standard_v2_diagnosis.json  standard_v2_legacy_report.json  standard_v2_report.json  standard_v3_diagnosis.json  standard_v3_legacy_report.json  standard_v3_report.json  standard_v4_diagnosis.json  standard_v4_legacy_report.json  standard_v4_report.json  standard_v5_ensemble_report.json  standard_v6_ensemble_diagnosis.json  standard_v6_ensemble_report.json  standard_v6_report.json  standard_v7_report.json  standard_v8_ensemble_diagnosis.json  standard_v8_ensemble_report.json  standard_v8_report.json  standard_v9_report.json
scripts/: audit_dataset.py  batch.py  debug_cells.py  debug_compare_paths.py  debug_detection.py  debug_grid.py  debug_homography.py  debug_homography2.py  debug_homography3.py  debug_homography4.py  debug_homography5.py  debug_pipeline.py  debug_test002.py  debug_warped.py  diag_board.py  diag_eval_v8.py  diag_grid.py  diag_hough.py  diag_output.txt  diag_t1.py  diag_v2_output.txt  diag_v3_output.txt  diagnose_eval_errors.py  diagnose_model.py  eval_output.txt  eval_pipeline.py  (+23 more)
(+32 files in other folders)
