[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cchlink"
version = "0.1.0"
description = "中国象棋棋盘图片转 FEN 识别管线"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "opencv-python>=4.8,<5",
  "Pillow>=10,<12",
  "torch>=2.0",
  "torchvision>=0.15",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
